test/good/nullables/nullable07.px

[Int?] a = [null]
print a

[Bool?] b = [null, true, false]
print b

[Char?] c = ['a', null]
print c
