test/bad/nullables/op09.px

[Bool]? b = null
b?[0] = true
